# Polygents

./: .gitignore  README.md
backend/: config.json.example  pyproject.toml
backend/app/: config.py  main.py  settings.py
backend/app/api/: agents.py  logs.py  meta_agent.py  plugins.py  router.py  runs.py  skills.py  teams.py  workflows.py  workspace.py
backend/app/engine/: agent_manager.py  broker.py  file_comm.py  file_watcher.py  free_orchestrator.py  meta_agent.py  orchestrator.py  prompts.py  registry.py  run_store.py  runner.py  scheduler.py  sdk_client.py  single_runner.py  verdict.py  workflow_store.py  workspace_watcher.py
backend/app/models/: schemas.py
backend/app/providers/: __init__.py  base.py  claude_provider.py
backend/app/storage/: run_store.py  workflow_store.py
backend/app/templates/: content-team.yaml  dev-team.yaml  fastapi-用户系统开发团队.yaml  research-team.yaml  三线并行市场调研团队.yaml
backend/app/ws/: handler.py  manager.py
backend/scripts/: run_smoke.py  sdk_probe.py
backend/tests/: conftest.py  test_api.py  test_broker.py  test_file_comm.py  test_orchestrator.py  test_prompts.py  test_run_store.py  test_schemas.py  test_sdk_client.py  test_verdict.py  test_workflow_store.py
docs/: 01-overview.md  02-architecture.md  03-features.md  04-development.md  README.md  api-reference.md  architecture.md  design-v2.md  design.md
docs/plans/: 2026-03-31-phase1.md  2026-04-01-config-system.md  2026-04-01-goal-mechanism.md  (+4 more)
frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
scripts/: dev.sh
(+49 files in other folders)
